other-gpol/create-default-pdb/.chainsaw-test/exception-deployment-sibling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exception-deployment-sibling
  namespace: default-pdb-ns
  labels: {app: exception-sibling}
spec:
  replicas: 1
  selector:
    matchLabels: {app: exception-sibling}
  template:
    metadata:
      labels: {app: exception-sibling}
    spec:
      containers:
      - name: app
        image: busybox:1.36
