other-gpol/create-default-pdb/.chainsaw-test/exception-pdb-sibling.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: exception-deployment-sibling-default-pdb
  namespace: default-pdb-ns
