other-gpol/create-default-pdb/.chainsaw-test/exception-wrong-namespace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exception-deployment
  namespace: default-pdb-other-ns
  labels: {app: exception-wrong-namespace}
spec:
  replicas: 1
  selector:
    matchLabels: {app: exception-wrong-namespace}
  template:
    metadata:
      labels: {app: exception-wrong-namespace}
    spec:
      containers:
      - name: app
        image: busybox:1.36
