other-gpol/create-default-pdb/.chainsaw-test/exception-wrong-namespace-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: exception-deployment-default-pdb
  namespace: default-pdb-other-ns
