other-gpol/create-default-pdb/.chainsaw-test/exception-wrong-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default-pdb-other-ns
