other-gpol/create-default-pdb/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: create-default-pdb
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
  - name: step-01
    try:
    - apply:
        file: ../create-default-pdb.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: deployment.yaml
    - assert:
        file: pdb-generated.yaml
  - name: exception-isolation
    try:
    - apply:
        file: exception-namespace.yaml
    - apply:
        file: exception.yaml
    - apply:
        file: exception-deployment.yaml
    - sleep:
        duration: 15s
    - error:
        file: exception-pdb.yaml
    - apply:
        file: exception-deployment-sibling.yaml
    - sleep:
        duration: 15s
    - assert:
        file: exception-pdb-sibling.yaml
    - apply:
        file: exception-wrong-namespace.yaml
    - apply:
        file: exception-wrong-namespace-deployment.yaml
    - sleep:
        duration: 15s
    - assert:
        file: exception-wrong-namespace-pdb.yaml
    - delete:
        file: exception.yaml
    - delete:
        file: exception-deployment.yaml
    - sleep:
        duration: 5s
    - apply:
        file: exception-deployment.yaml
    - sleep:
        duration: 15s
    - assert:
        file: exception-pdb.yaml
